k8s/migration-job.yaml
apiVersion:  v1
kind: Pod
metadata:
  name: ex-dev-migration
  namespace: ex-dev
spec:
  restartPolicy: Never
  containers:
    - name: ex-dev-jobs-data-migration
      image: exceptionless/job-ci:6.0.3569-pre
      resources:
        requests:
          memory: 75Mi
          cpu: 200m
        limits:
          memory: 125Mi
          cpu: 400m
      args: [DataMigration]
