k8s/elastic-monitor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-monitor
  namespace: elastic-system
  annotations:
    alb.networking.azure.io/alb-name: public-alb
    alb.networking.azure.io/alb-namespace: kube-system
    alb.networking.azure.io/alb-frontend: elastic-monitor-fe
    cert-manager.io/cluster-issuer: cert-manager-webhook-dnsimple-production
spec:
  ingressClassName: azure-alb-external
  tls:
    - hosts:
        - kibana.exceptionless.io
      secretName: elastic-monitor-kibana-tls
  rules:
    - host: kibana.exceptionless.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kibana-monitor-kb-http
                port:
                  number: 5601

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-monitor-http
  namespace: elastic-system
  annotations:
    alb.networking.azure.io/alb-name: public-alb
    alb.networking.azure.io/alb-namespace: kube-system
    alb.networking.azure.io/alb-frontend: elastic-monitor-fe
    alb.networking.azure.io/alb-ingress-extension: elastic-monitor-http-to-https
spec:
  ingressClassName: azure-alb-external
  rules:
    - host: kibana.exceptionless.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kibana-monitor-kb-http
                port:
                  number: 5601

---
apiVersion: v1
kind: Service
metadata:
  name: apm
  namespace: elastic-system
spec:
  selector:
    agent.k8s.elastic.co/name: elastic-agent
  ports:
    - protocol: TCP
      port: 8200
