k8s/ex-prod-monitor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ex-prod-monitor
  namespace: ex-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - xxx.exceptionless.io
      secretName: ex-prod-monitor-kibana-tls
  rules:
    - host: xxx.exceptionless.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ex-prod-monitor-kb-http
                port:
                  name: https
